--- a/.github/workflows/ci-postgres-mysql.yml
+++ b/.github/workflows/ci-postgres-mysql.yml
@@ -3,6 +3,7 @@ name: Test Postgres and MySQL schemas
 on:
   schedule:
     - cron: '0 0 * * *'
+  workflow_call:
   workflow_dispatch:
   pull_request:
     paths:
