--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -8,15 +8,11 @@ on:
       - 'release/*'
 
 jobs:
-  publish-release:
+  publish-to-npm:
+    name: Publish to NPM
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-      id-token: write
-
-    timeout-minutes: 60
+    timeout-minutes: 10
     env:
       NPM_CONFIG_PROVENANCE: true
 
@@ -51,6 +47,66 @@ jobs:
           pnpm publish -r --publish-branch ${{github.event.pull_request.base.ref}} --access public --tag rc --no-git-checks
           npm dist-tag rm n8n rc
 
+  publish-to-docker-hub:
+    name: Publish to DockerHub
+    needs: [publish-to-npm]
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+        with:
+          fetch-depth: 0
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3.0.0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.0.0
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3.0.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3.0.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set release version in env
+        run: echo "RELEASE=$(node -e 'console.log(require("./package.json").version)')" >> $GITHUB_ENV
+
+      - name: Build
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: ./docker/images/n8n
+          build-args: |
+            N8N_VERSION=${{ env.RELEASE }}
+          platforms: linux/amd64,linux/arm64
+          provenance: false
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/n8n:${{ env.RELEASE }}
+            ghcr.io/${{ github.repository_owner }}/n8n:${{ env.RELEASE }}
+
+  create-github-release:
+    name: Create a GitHub Release
+    needs: [publish-to-npm, publish-to-docker-hub]
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    permissions:
+      contents: write
+      id-token: write
+
+    steps:
       - name: Create a Release on GitHub
         uses: ncipollo/release-action@v1
         with:
